--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,206 +2,232 @@
   .content {
     max-width: 640px;
     margin: auto;
-    background-color: aqua;
-   }
+    /* background-color: aqua; */
+  }
+  .maincontent {
+    margin: 0 auto;
+    background-color: red;
+    border-color: #dddddd;
+    max-width: 600px;
+  }
+  .doggo {
+    width: 92%;
+    float: none;
+    margin: 5px 0px 5px 0px;
+   padding: 8px 8px 8px 8px;
+  
+
+  }
 }
+
 @media only screen and (max-width: 768px) {
   .content {
     max-width: 768px;
     margin: auto;
-   }
+    /* background-color:whitesmoke; */
+    border-color: #333;
+  }
+  .maincontent {
+    margin: 0 auto;
+    /* background-color:rgb(140, 0, 255);
+    border-color:rgb(140, 0, 255); */
+    max-width: 710px;
+  }
+  .doggo {
+    float: left;
+  }
 }
 
+/* @media only screen and (max-width: 769px) {
+  .doggo {
+    float: left;
+  }
+} */
 .content {
   max-width: 960px;
   margin: auto;
- }
-body {
-  padding: 0; 
-  
-  margin: 0;
-  
- font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
- font-size: medium;
- line-height: 180%;
- color: #333;
- background-image: url("../../assets/images/background.png");
 }
 
+body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: medium;
+  line-height: 180%;
+  color: #333;
+  background-image: url("../../assets/images/background.png");
+}
 
-
-s
-h1,
+s h1,
 h2 {
- color: #4aaaa5;
- background-color: #4aaaa5;
- font-family: 'Georgia', Times, Times New Roman, serif;
+  color: #4aaaa5;
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 h1 {
- padding: 20px 0;
- margin: 0;
- margin-bottom: 20px;
- font-size: 28px;
- text-align: center;
- /* clear: none;
+  padding: 20px 0;
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 28px;
+  text-align: center;
+  /* clear: none;
   */
- /* float:left;
+  /* float:left;
   */
 }
 
 h2 {
- font-size: 24px;
- color: #4aaaa5;
- background-color: #ffffff;
- padding-top: 20px;
- padding-right: 20px;
- padding-left: 25px;
+  font-size: 24px;
+  color: #4aaaa5;
+  background-color: #ffffff;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 25px;
 }
 
 a {
- color: lightsteelblue;
- font-size: small;
- padding-right: 12px;
+  color: lightsteelblue;
+  font-size: small;
+  padding-right: 12px;
 }
 
 .maincontent {
- margin: 0 auto; 
- background-color: #ffffff;
- border-color: #dddddd;
+  margin: 0 auto;
+  background-color: #ffffff;
+  border-color: #dddddd;
 }
 
 #main-bio,
 #bio-image {
- /* float: left;
+  /* float: left;
   */
 }
 
 nav {
- /* float: right;
+  /* float: right;
   */
- position: absolute;
- right: 21%;
- margin-top: 40px;
+  position: absolute;
+  right: 21%;
+  margin-top: 40px;
 }
 
 .doggo {
- float: left;
- margin: 5px 15px 5px 15px;
+  /* float: left; */
+  margin: 5px 15px 5px 15px;
 }
 
 p {
- margin: 5px 0px 5px 18px;
- color: #777777;
+  margin: 5px 0px 5px 18px;
+  color: #777777;
 }
 
 header {
- background-color: #ffffff;
- height: 80px;
+  background-color: #ffffff;
+  height: 80px;
 }
 
 footer {
- background-color: #666666;
- position: absolute;
- bottom: 0;
- width: 100%;
- height: 44px;
- /* Height of the footer */
- border-top-color: #4aaaa5;
- border-top-width: 6px;
- border-top-style: solid;
- text-align: center;
- font-size: small;
- color: white;
- font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
- position: fixed;
+  background-color: #666666;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 44px;
+  /* Height of the footer */
+  border-top-color: #4aaaa5;
+  border-top-width: 6px;
+  border-top-style: solid;
+  text-align: center;
+  font-size: small;
+  color: white;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  position: fixed;
 }
 
 .myname {
- background-color: #4aaaa5;
- border-color: #cccccc;
- color: white;
- width: 240px;
- height: 30px;
- margin-top: -70px;
+  background-color: #4aaaa5;
+  border-color: #cccccc;
+  color: white;
+  width: 240px;
+  height: 30px;
+  margin-top: -70px;
 }
 
 .about {
- margin-left: 15px;
- margin-right: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 input,
 textarea {
- display: block;
+  display: block;
 }
 
 button {
- background-color: #4aaaa5;
- color: #ffffff;
- height: 30px;
- width: 100px;
- margin-left: 20px;
- margin-bottom: 5px;
+  background-color: #4aaaa5;
+  color: #ffffff;
+  height: 30px;
+  width: 100px;
+  margin-left: 20px;
+  margin-bottom: 5px;
 }
 
 contactform {
- width: 300px;
+  width: 300px;
 }
 
 input[type=text],
 select,
 textarea {
- width: 95%;
- padding: 12px 20px;
- margin: 8px 8px 0px 20px;
- display: inline-block;
- border: 1px solid #ccc;
- border-radius: 4px;
- box-sizing: border-box;
+  width: 95%;
+  padding: 12px 20px;
+  margin: 8px 8px 0px 20px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 label {
- font-family: Arial, Helvetica, sans-serif;
- color: grey;
- font-size: 14px;
- margin: 8px 8px 0px 20px;
- padding-top: 8px 0px 0px 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: grey;
+  font-size: 14px;
+  margin: 8px 8px 0px 20px;
+  padding-top: 8px 0px 0px 0px;
 }
 
 .portfoliopics {
- float: left;
- margin: 10px 10px 10px 10px;
+  float: left;
+  margin: 10px 10px 10px 10px;
 }
 
 .gallery {
- width: 90%;
- /* margin: 0px;
+  width: 90%;
+  /* margin: 0px;
  paddig */
 }
 
 .floatImage {
- box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.4);
- z-index: -1;
- position: relative;
- width: 80%;
- height: 80px;
-
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.4);
+  z-index: -1;
+  position: relative;
+  width: 80%;
+  height: 80px;
 }
 
 figure {
- width: 25%;
- float: left;
+  width: 25%;
+  float: left;
 }
 
 figcaption {
- background-color: #4aaaa5;
- height: 1.9em;
- width: 80%;
- /* margin-top: -2.4em; */
- float: left;
- text-align: center;
- color: white;
- z-index: 1;
- font-family: 'Open Sans', sans;
+  background-color: #4aaaa5;
+  height: 1.9em;
+  width: 80%;
+  /* margin-top: -2.4em; */
+  float: left;
+  text-align: center;
+  color: white;
+  z-index: 1;
+  font-family: 'Open Sans', sans;
 }
