--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,14 +9,21 @@
     background-color: red;
     border-color: #dddddd;
     max-width: 600px;
+    padding:  8px 8px 8px 8px;
   }
   .doggo {
-    width: 92%;
+    width: 90%;
     float: none;
     margin: 5px 0px 5px 0px;
    padding: 8px 8px 8px 8px;
-  
-
+  }
+  footer {
+   position: relative;
+  }
+  nav {
+    position: absolute;
+    right: 21%;
+    margin-top: 40px;
   }
 }
 
@@ -34,19 +41,61 @@
     max-width: 710px;
   }
   .doggo {
+    width: 40%;
     float: left;
+    margin: 5px 0px 5px 0px;
+   /* padding: 8px 8px 8px 8px; */
   }
+  .myname {
+   margin-left: 28px;
+  }
+  nav {
+    margin-left: 80px;
+  }
+  nav {
+    position: absolute;
+    right: 3%;
+    margin-top: 40px;
+  }
+  
 }
 
-/* @media only screen and (max-width: 769px) {
-  .doggo {
-    float: left;
+@media only screen and (min-width: 769px) {
+  .content {
+    max-width: 960px;
+    margin: auto;
   }
-} */
-.content {
+  .maincontent {
+    margin: auto;
+    /* background-color:rgb(140, 0, 255);
+    border-color:rgb(140, 0, 255); */
+    max-width: 960px;
+  }
+  nav {
+    position: absolute;
+    right: 21%;
+    margin-top: 40px;
+  }
+
+}
+
+/* 
+.maincontent {
+  margin: auto;
+  /* background-color:rgb(140, 0, 255);
+  border-color:rgb(140, 0, 255); */
+  /* max-width: 960px;
+}  */
+
+/* .content {
   max-width: 960px;
   margin: auto;
-}
+} */
+/* .maincontent {
+  margin: auto;
+  max-width: 960px;
+} */
+
 
 body {
   padding: 0;
@@ -104,13 +153,7 @@ a {
   */
 }
 
-nav {
-  /* float: right;
-  */
-  position: absolute;
-  right: 21%;
-  margin-top: 40px;
-}
+
 
 .doggo {
   /* float: left; */
@@ -125,6 +168,7 @@ p {
 header {
   background-color: #ffffff;
   height: 80px;
+  position: static;
 }
 
 footer {
@@ -141,7 +185,7 @@ footer {
   font-size: small;
   color: white;
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  position: fixed;
+  
 }
 
 .myname {
