--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,84 +1,8 @@
 
-
-/* 
-.maincontent {
-  margin: auto;
-  /* background-color:rgb(140, 0, 255);
-  border-color:rgb(140, 0, 255); */
-  /* max-width: 960px;
-}  */
-
-/* .content {
-  max-width: 960px;
-  margin: auto;
-} */
-/* .maincontent {
-  margin: auto;
-  max-width: 960px;
-} */
-
-
-body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: medium;
-  line-height: 180%;
-  color: #333;
-  background-image: url("../../assets/images/background.png");
-}
-
-s h1,
-h2 {
-  color: #4aaaa5;
-  background-color: #4aaaa5;
-  font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-h1 {
-  padding: 20px 0;
-  margin: 0;
-  margin-bottom: 20px;
-  font-size: 28px;
-  text-align: center;
-  /* clear: none;
-  */
-  /* float:left;
-  */
-}
-
-h2 {
-  font-size: 24px;
-  color: #4aaaa5;
-  background-color: #ffffff;
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-left: 25px;
-}
-
-a {
-  color: lightsteelblue;
-  font-size: small;
-  padding-right: 12px;
-}
-
 .maincontent {
   margin: 0 auto;
   background-color: #ffffff;
   border-color: #dddddd;
-}
-
-#main-bio,
-#bio-image {
-  /* float: left;
-  */
-}
-
-
-
-.doggo {
-  /* float: left; */
-  margin: 5px 15px 5px 15px;
 }
 
 p {
@@ -196,33 +120,192 @@ figcaption {
   z-index: 1;
   font-family: 'Open Sans', sans;
 }
-@media only screen and (max-width: 640px) {
+
+
+
+
+
+@media only screen and (min-width: 960px) {
   .content {
-    max-width: 640px;
+    max-width: 960px;
     margin: auto;
-    /* background-color: aqua; */
   }
   .maincontent {
-    margin: 0 auto;
-    /* background-color: red; */
-    border-color: #dddddd;
-    max-width: 600px;
-    padding:  8px 8px 8px 8px;
-  }
-  .doggo {
-    width: 90%;
-  }
-  footer {
-   position: relative;
+    margin: auto;
+    /* background-color:rgb(140, 0, 255);
+    border-color:rgb(140, 0, 255); */
+    max-width: 960px;
   }
   nav {
     position: absolute;
     right: 21%;
     margin-top: 40px;
   }
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: medium;
+    line-height: 180%;
+    color: #333;
+    background-image: url("../../assets/images/background.png");
+  }
+  h1,
+h2 {
+  color: #4aaaa5;
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
+h1 {
+  padding: 20px 0;
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 28px;
+  text-align: center;
+  /* clear: none;
+  */
+  /* float:left;
+  */
+}
 
+h2 {
+  font-size: 24px;
+  color: #4aaaa5;
+  background-color: #ffffff;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 25px;
+}
+
+a {
+  color: lightsteelblue;
+  font-size: small;
+  padding-right: 12px;
+}
+.doggo {
+  margin: 5px 15px 5px 15px;
+}
+
+}
+@media only screen and (max-width: 959px) {
+  .content {
+    max-width: 959px;
+    margin: auto;
+  }
+  .maincontent {
+    margin: auto;
+    /* background-color:rgb(140, 0, 255);
+    border-color:rgb(140, 0, 255); */
+    max-width: 890px;
+  }
+  nav {
+    position: absolute;
+    right: 1%;
+    margin-top: 40px;
+  }
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: medium;
+    line-height: 180%;
+    color: #333;
+    background-image: url("../../assets/images/background.png");
+  }
+  h1,
+h2 {
+  color: #4aaaa5;
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+h1 {
+  padding: 20px 0;
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 28px;
+  text-align: center;
+  margin-left: 35px;
+}
+
+h2 {
+  font-size: 24px;
+  color: #4aaaa5;
+  background-color: #ffffff;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 25px;
+}
+.doggo {
+  margin: 5px 15px 5px 15px;
+}
+a {
+  color: lightsteelblue;
+  font-size: small;
+  padding-right: 12px;
+}
+}
+@media only screen and (max-width: 900px) {
+  .content {
+    max-width: 900px;
+    margin: auto;
+  }
+  .maincontent {
+    margin: auto;
+    /* background-color:rgb(140, 0, 255);
+    border-color:rgb(140, 0, 255); */
+    max-width: 860px;
+    font-size: 14px;
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  nav {
+    position: absolute;
+    right: 1%;
+    margin-top: 40px;
+  }
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: medium;
+    line-height: 180%;
+    color: #333;
+    background-image: url("../../assets/images/background.png");
+  }
+  h1,
+h2 {
+  color: #4aaaa5;
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+h1 {
+  padding: 20px 0;
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 28px;
+  text-align: center;
+  margin-left: 20px;
+}
+
+h2 {
+  font-size: 24px;
+  color: #4aaaa5;
+  background-color: #ffffff;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 25px;
+}
+.doggo {
+  margin: 5px 15px 5px 15px;
+}
+a {
+  color: lightsteelblue;
+  font-size: small;
+  padding-right: 12px;
+}
+}
 @media only screen and (max-width: 768px) {
   .content {
     max-width: 768px;
@@ -256,24 +339,110 @@ figcaption {
     right: 3%;
     margin-top: 40px;
   }
-  
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: medium;
+    line-height: 180%;
+    color: #333;
+    background-image: url("../../assets/images/background.png");
+  }
+  h1,
+h2 {
+  color: #4aaaa5;
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
 }
-
-@media only screen and (min-width: 769px) {
+h1 {
+  padding: 20px 0;
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 28px;
+  text-align: center;
+  /* clear: none;
+  */
+  /* float:left;
+  */
+}
+h2 {
+  font-size: 24px;
+  color: #4aaaa5;
+  background-color: #ffffff;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 25px;
+}
+a {
+  color: lightsteelblue;
+  font-size: small;
+  padding-right: 12px;
+} 
+}
+@media only screen and (max-width: 640px) {
   .content {
-    max-width: 960px;
+    max-width: 640px;
     margin: auto;
+    /* background-color: aqua; */
   }
   .maincontent {
-    margin: auto;
-    /* background-color:rgb(140, 0, 255);
-    border-color:rgb(140, 0, 255); */
-    max-width: 960px;
+    margin: 0 auto;
+    /* background-color: red; */
+    border-color: #dddddd;
+    max-width: 580px;
+    padding:  8px 8px 8px 8px;
+  }
+  .doggo {
+    width: 93%;
+  
+  }
+  footer {
+   position: relative;
   }
   nav {
     position: absolute;
-    right: 21%;
+    right: 1%;
     margin-top: 40px;
   }
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: medium;
+    line-height: 180%;
+    color: #333;
+    background-image: url("../../assets/images/background.png");
+  }
+  h1,
+h2 {
+  color: #4aaaa5;
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+h1 {
+  padding: 20px 0;
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 28px;
+  text-align: center;
+
+
+}
+
+h2 {
+  font-size: 24px;
+  color: #4aaaa5;
+  background-color: #ffffff;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 25px;
+}
+
+a {
+  color: lightsteelblue;
+  font-size: small;
+  padding-right: 12px;
+}
 
 }
